2006-10-15  Sebastien Pouliot  <sebastien@ximian.com>

	* Gendarme.Rules.Exceptions.xml.in: Update Uri for rules (to generate
	more useful reports).	

2006-09-28  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Adjust EXTRA_DIST to include project files in tarballs.

2006-09-28  Christian Birkl  <christian.birkl@gmail.com>

	* Gendarme.Rules.Exceptions.csproj: Included ChangeLog
	* DontDestroyStackTrace.cs: Migrated untyped IList messages collection
	to typed MessageCollection class.
	
2006-08-15  Russell Morris  <russell@russellsprojects.com>

	* DontDestroyStackTrace.cs: Fix possible NRE when processing invalid 
	IL. http://blog.russellsprojects.com/?p=3

2006-07-31  Sebastien Pouliot  <sebastien@ximian.com>

	* Gendarme.Rules.Exceptions.mdp: New. Project file for MonoDevelop.

2006-06-19  Russell Morris  <russell@russellsprojects.com>

	* Initial import of exception-management rule assembly