@@ -1,3 +1,8 @@
+2007-09-01  Nestor Salceda <nestor.salceda@gmail.com>
+	
+	* DontSwallowErrorsCatchingNonspecificExceptionsTest.cs: New.  Unit
+	tests for DontSwallowErrorsCatchingNonSpecificExceptionsRule.
+	
 2006-09-28  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* Makefile.am: Adjust EXTRA_DIST to include project files in tarballs.
